2004-03-16  Daniel Berlin  <dberlin@dberlin.org>

PR optimization/14562
	* tree-ssa-pre.c (generate_expr_as_of_bb): Don't use names_match_p.
	(generate_vops_as_of_bb): Ditto.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@79533 138bc75d-0d04-0410-961f-82ee72b054a4